--- a/deploy/flora.html
+++ b/deploy/flora.html
@@ -55,7 +55,9 @@
                         Flowers often say what words cannot, and this is what we’re always 
                         after: sharing a feeling and capturing everything we can’t put into 
                         words.</p>
-                    <button><img src="img/arrow-right.svg" alt="arrow"></button>
+                        <section class="card-button">
+                            <button><img src="img/arrow-right.svg" alt="arrow"></button>
+                        </section>
                 </div>
             </section>
                 </li>
@@ -71,7 +73,9 @@
                          to houseplants that we promise are almost impossible to kill, we’ ll 
                          help find the plants for you. We provide creative expertise and unique
                           plants tailored to your space, event, and personality.</p>
-                    <button><img src="img/arrow-right.svg" alt="arrow"></button>
+                          <section class="card-button">
+                            <button><img src="img/arrow-right.svg" alt="arrow"></button>
+                        </section>
                 </div>
             </section>
                 </li>
@@ -103,22 +107,26 @@
             </section>
         <aside><img src="img/flora-shop.jpg" alt="shop"></aside>
         </section>
-    <footer>
+    <footer class="css-grid-global">
                 <div>
-                    <section id="contact">
-                        <section>
+              
+                        <section id="phone">
                             <a href="#">
-                            <img src="img/phone.svg" alt="phone">
-                            <h3>267-331-6292</h3>
-                        </a>
-                        </section>
-                        <section>
+                                <img src="img/phone.svg" alt="phone">
+                            </a>
                             <a href="#">
-                            <img src="img/mail.svg" alt="mail">
-                            <h3 class="show-for-md">Contact us</h3>
-                        </a>
+                                <h3>267-331-6292</h3>
+                            </a>
                         </section>
-                    </section>
+                        <section id="mail">
+                            <a href="#">
+                                <img src="img/mail.svg" alt="mail">
+                            </a>
+                            <a href="#"  class="show-for-md">
+                                <h3>Contact us</h3>
+                            </a>
+                        </section>
+            
                     <section id="socials">
                         <a href="#"><img src="img/instagram.svg" alt="instagram"></a>
                         <a href="#"><img src="img/facebook.svg" alt="facebook"></a>
