--- a/deploy/index.html
+++ b/deploy/index.html
@@ -43,57 +43,66 @@
             </section>
     <section id="homepage-cards" class="css-grid-global">
                     <div>
-                    <ul class="cards">
-                        <li>
-                            <section class="css-grid-global">
-                                <div>
-                            <h1>OUR STORY</h1>
-                            <img class="card-img" src="img/our-story.jpg" alt="our story">
-                            <p>Vault + Vine aspires to support our community however we can. 
-                                Learn more about us and our mission.</p>
-                            <button><img src="img/arrow-right.svg" alt="arrow"></button>
-                        </div>
-                        </section>
-                        </li>
-                        <li>
-                            <section class="css-grid-global">
-                                <div>
-                            <h1>SHOP</h1>
-                            <img class="card-img" src="img/shop.jpg" alt="shop">
-                            <p>Let Vault + Vine be your one stop shop for gifts and other items. 
-                                Shop our local, sustainable, and unique offerings.</p>
-                            <button><img src="img/arrow-right.svg" alt="arrow"></button>
-                        </div>
-                    </section>
-                        </li>
-                        <li>
-                            <section class="css-grid-global">
-                                <div>
-                            <h1>CAFÉ</h1>
-                            <img class="card-img" src="img/cafe.jpg" alt="cafe">
-                            <p>Enjoy locally sourced coffee, tea and pastries at our in house café. 
-                                Check out our café hours and plan your visit..</p>
-                            <button><img src="img/arrow-right.svg" alt="arrow"></button>
-                        </div>
-                    </section>
-                        </li>
-                        <li>
-                            <section class="css-grid-global">
-                                <div>
-                            <h1>FLORA</h1>
-                            <img class="card-img" src="img/plants.jpg" alt="flora">
-                            <p>Vault + Vine offers a wide variety of locally grown and sourced flowers and other plants.
-                                 Come in and browse our selection or order your arrangement online.</p>
-                            <button><img src="img/arrow-right.svg" alt="arrow"></button>
-                        </div>
-                    </section>
-                        </li>
-                    </ul>
-                </div>
+                        <ul class="cards">
+                            <li>
+                                <section class="css-grid-global">
+                                    <div>
+                                        <h1>OUR STORY</h1>
+                                        <img class="card-img" src="img/our-story.jpg" alt="our story">
+                                        <p>Vault + Vine aspires to support our community however we can.
+                                            Learn more about us and our mission.</p>
+                                            <section class="card-button">
+                                        <button><img src="img/arrow-right.svg" alt="arrow"></button>
+                                    </section>
+                                    </div>
+                                </section>
+                            </li>
+                            <li>
+                                <section class="css-grid-global">
+                                    <div>
+                                        <h1>SHOP</h1>
+                                        <img class="card-img" src="img/shop.jpg" alt="shop">
+                                        <p>Let Vault + Vine be your one stop shop for gifts and other items.
+                                            Shop our local, sustainable, and unique offerings.</p>
+                                            <section class="card-button">
+                                                <button><img src="img/arrow-right.svg" alt="arrow"></button>
+                                            </section>
+                                    </div>
+                                </section>
+                            </li>
+                            <li>
+                                <section class="css-grid-global">
+                                    <div>
+                                        <h1>CAFÉ</h1>
+                                        <img class="card-img" src="img/cafe.jpg" alt="cafe">
+                                        <p>Enjoy locally sourced coffee, tea and pastries at our in house café.
+                                            Check out our café hours and plan your visit.</p>
+                                            <section class="card-button">
+                                                <button><img src="img/arrow-right.svg" alt="arrow"></button>
+                                            </section>
+                                    </div>
+                                </section>
+                            </li>
+                            <li>
+                                <section class="css-grid-global">
+                                    <div>
+                                        <h1>FLORA</h1>
+                                        <img class="card-img" src="img/plants.jpg" alt="flora">
+                                        <p>Vault + Vine offers a wide variety of locally grown and sourced flowers and other plants.
+                                            Come in and browse our selection or order your arrangement online.</p>
+                                            <section class="card-button">
+                                                <button><img src="img/arrow-right.svg" alt="arrow"></button>
+                                            </section>
+                                    </div>
+                                </section>
+                            </li>
+                        </ul>
+                    </div>
                 </section>
     <section id="about-us" class="css-grid-global">
                         <div>
                             <h1>ABOUT US</h1>
+                            <div id="about-us-grid">
                             <p>Vault + Vine is a floral studio and thoughtfully curated retail 
                                 space in East Falls, Philadelphia. Founded in 2017, we offer:</p>
                                 <aside><img src="img/about-us-2.jpeg" alt="flowers"></aside>
@@ -124,24 +133,29 @@
                                 and connect with our neighbors. Our vision is to create a community of businesses 
                                 and customers that supports, promotes, and celebrates the local and global economy and by 
                                 demanding accountability in every aspect of the supply chain.</p>
+                            </div>
                         </div>
                     </section>
-    <footer>
+    <footer class="css-grid-global">
                             <div>
-                                <section id="contact">
-                                    <section>
+                          
+                                    <section id="phone">
                                         <a href="#">
-                                        <img src="img/phone.svg" alt="phone">
-                                        <h3>267-331-6292</h3>
-                                    </a>
-                                    </section>
-                                    <section>
+                                            <img src="img/phone.svg" alt="phone">
+                                        </a>
                                         <a href="#">
-                                        <img src="img/mail.svg" alt="mail">
-                                        <h3 class="show-for-md">Contact us</h3>
-                                    </a>
+                                            <h3>267-331-6292</h3>
+                                        </a>
                                     </section>
-                                </section>
+                                    <section id="mail">
+                                        <a href="#">
+                                            <img src="img/mail.svg" alt="mail">
+                                        </a>
+                                        <a href="#"  class="show-for-md">
+                                            <h3>Contact us</h3>
+                                        </a>
+                                    </section>
+                        
                                 <section id="socials">
                                     <a href="#"><img src="img/instagram.svg" alt="instagram"></a>
                                     <a href="#"><img src="img/facebook.svg" alt="facebook"></a>
