--- a/deploy/index.html
+++ b/deploy/index.html
@@ -43,15 +43,15 @@
             </section>
     <section id="homepage-cards" class="css-grid-global">
                     <div>
-                        <ul class="cards">
+                        <ul id="homepage-cards">
                             <li>
                                 <section class="css-grid-global">
                                     <div>
                                         <h1>OUR STORY</h1>
-                                        <img class="card-img" src="img/our-story.jpg" alt="our story">
+                                        <img class="home-card-img" src="img/our-story.jpg" alt="our story">
                                         <p>Vault + Vine aspires to support our community however we can.
                                             Learn more about us and our mission.</p>
-                                            <section class="card-button">
+                                            <section class="home-card-button">
                                         <button><img src="img/arrow-right.svg" alt="arrow"></button>
                                     </section>
                                     </div>
@@ -61,10 +61,10 @@
                                 <section class="css-grid-global">
                                     <div>
                                         <h1>SHOP</h1>
-                                        <img class="card-img" src="img/shop.jpg" alt="shop">
+                                        <img class="home-card-img" src="img/shop.jpg" alt="shop">
                                         <p>Let Vault + Vine be your one stop shop for gifts and other items.
                                             Shop our local, sustainable, and unique offerings.</p>
-                                            <section class="card-button">
+                                            <section class="home-card-button">
                                                 <button><img src="img/arrow-right.svg" alt="arrow"></button>
                                             </section>
                                     </div>
@@ -74,10 +74,10 @@
                                 <section class="css-grid-global">
                                     <div>
                                         <h1>CAFÉ</h1>
-                                        <img class="card-img" src="img/cafe.jpg" alt="cafe">
+                                        <img class="home-card-img" src="img/cafe.jpg" alt="cafe">
                                         <p>Enjoy locally sourced coffee, tea and pastries at our in house café.
                                             Check out our café hours and plan your visit.</p>
-                                            <section class="card-button">
+                                            <section class="home-card-button">
                                                 <button><img src="img/arrow-right.svg" alt="arrow"></button>
                                             </section>
                                     </div>
@@ -87,10 +87,10 @@
                                 <section class="css-grid-global">
                                     <div>
                                         <h1>FLORA</h1>
-                                        <img class="card-img" src="img/plants.jpg" alt="flora">
+                                        <img class="home-card-img" src="img/plants.jpg" alt="flora">
                                         <p>Vault + Vine offers a wide variety of locally grown and sourced flowers and other plants.
                                             Come in and browse our selection or order your arrangement online.</p>
-                                            <section class="card-button">
+                                            <section class="home-card-button">
                                                 <button><img src="img/arrow-right.svg" alt="arrow"></button>
                                             </section>
                                     </div>
