--- a/deploy/index.html
+++ b/deploy/index.html
@@ -41,12 +41,12 @@
                     </section>
                 </div>
             </section>
-    <section id="homepage-cards" class="css-grid-global">
+    <section id="homepage-card-container" class="css-grid-global">
                     <div>
                         <ul id="homepage-cards">
-                            <li>
+                            <li >
                                 <section class="css-grid-global">
-                                    <div>
+                                    <div id="hc1">
                                         <h1>OUR STORY</h1>
                                         <img class="home-card-img" src="img/our-story.jpg" alt="our story">
                                         <p>Vault + Vine aspires to support our community however we can.
@@ -57,9 +57,9 @@
                                     </div>
                                 </section>
                             </li>
-                            <li>
+                            <li >
                                 <section class="css-grid-global">
-                                    <div>
+                                    <div id="hc2">
                                         <h1>SHOP</h1>
                                         <img class="home-card-img" src="img/shop.jpg" alt="shop">
                                         <p>Let Vault + Vine be your one stop shop for gifts and other items.
@@ -70,9 +70,9 @@
                                     </div>
                                 </section>
                             </li>
-                            <li>
+                            <li >
                                 <section class="css-grid-global">
-                                    <div>
+                                    <div id="hc3">
                                         <h1>CAFÉ</h1>
                                         <img class="home-card-img" src="img/cafe.jpg" alt="cafe">
                                         <p>Enjoy locally sourced coffee, tea and pastries at our in house café.
@@ -83,9 +83,9 @@
                                     </div>
                                 </section>
                             </li>
-                            <li>
+                            <li >
                                 <section class="css-grid-global">
-                                    <div>
+                                    <div id="hc4">
                                         <h1>FLORA</h1>
                                         <img class="home-card-img" src="img/plants.jpg" alt="flora">
                                         <p>Vault + Vine offers a wide variety of locally grown and sourced flowers and other plants.
