--- a/deploy/index.html
+++ b/deploy/index.html
@@ -100,7 +100,7 @@
                     </div>
                 </section>
     <section id="about-us" class="css-grid-global">
-                        <div>
+                        <div id="about-us-inside">
                             <h1>ABOUT US</h1>
                             <div id="about-us-grid">
                                 <section id="au1">
