--- a/deploy/flora.html
+++ b/deploy/flora.html
@@ -56,7 +56,7 @@
                                 after: sharing a feeling and capturing everything we can’t put into 
                                 words.</p>
                                 <section class="flora-card-button">
-                                    <button><img src="img/arrow-right.svg" alt="arrow"></button>
+                                    <a href="#"><img src="img/round-button.svg" alt="arrow"></a>
                                 </section>
                         </div>
                     </section>
@@ -74,7 +74,7 @@
                                  help find the plants for you. We provide creative expertise and unique
                                   plants tailored to your space, event, and personality.</p>
                                   <section class="flora-card-button">
-                                    <button><img src="img/arrow-right.svg" alt="arrow"></button>
+                                    <a href="#"><img src="img/round-button.svg" alt="arrow"></a>
                                 </section>
                         </div>
                     </section>
