fixed card grid

--- a/deploy/flora.html
+++ b/deploy/flora.html
@@ -46,7 +46,7 @@
                     <div>
                     <ul id="flora-cards">
                         <li>
-                            <section class="css-grid-global">
+                            <section class="card-grid-global">
                                 <div>
                             <h1>FLOWERS</h1>
                             <img class="flora-card-img" src="img/about-us-1.jpg" alt="flowers">
@@ -62,7 +62,7 @@
                     </section>
                         </li>
                         <li>
-                            <section class="css-grid-global">
+                            <section class="card-grid-global">
                                 <div>
                             <h1>PLANTS</h1>
                             <img class="fora-card-img" src="img/plants.jpg" alt="plants">
