--- a/deploy/index.html
+++ b/deploy/index.html
@@ -45,7 +45,7 @@
                     <div>
                         <ul id="homepage-cards">
                             <li >
-                                <section id="hc1" class="css-grid-global">
+                                <section id="hc1" class="card-grid-global">
                                     <div>
                                         <h1>OUR STORY</h1>
                                         <img class="home-card-img" src="img/our-story.jpg" alt="our story">
@@ -58,7 +58,7 @@
                                 </section>
                             </li>
                             <li >
-                                <section id="hc2" class="css-grid-global">
+                                <section id="hc2" class="card-grid-global">
                                     <div>
                                         <h1>SHOP</h1>
                                         <img class="home-card-img" src="img/shop.jpg" alt="shop">
@@ -71,7 +71,7 @@
                                 </section>
                             </li>
                             <li >
-                                <section id="hc3" class="css-grid-global">
+                                <section id="hc3" class="card-grid-global">
                                     <div>
                                         <h1>CAFÉ</h1>
                                         <img class="home-card-img" src="img/cafe.jpg" alt="cafe">
@@ -84,7 +84,7 @@
                                 </section>
                             </li>
                             <li >
-                                <section id="hc4" class="css-grid-global">
+                                <section id="hc4" class="card-grid-global">
                                     <div>
                                         <h1>FLORA</h1>
                                         <img class="home-card-img" src="img/plants.jpg" alt="flora">
