--- a/deploy/index.html
+++ b/deploy/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="https://kit.fontawesome.com/7ab68a398d.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@400;700&family=Barlow:wght@400;600&display=swap" rel="stylesheet">
@@ -21,7 +22,21 @@
                 </a>
                 </section>
                 <nav>
-                    <a href="flora.html">Flora</a>
+                    <nav id="main-menu">
+                        <aside class="hide-for-lg">
+                           <button id="close-btn">
+                              <i class="fa-solid fa-xmark-large"></i>
+                           </button>
+                        </aside>
+                        <section>
+                           <ul>
+                              <li><a href="#">OUR STORY</a></li>
+                              <li><a href="#">SHOP</a></li>
+                              <li><a href="#flora">FLORA</a></li>
+                              <li><a href="#">CAFÉ</a></li>
+                           </ul>
+                        </section>
+                     </nav>
                 </nav>
             </div>
         </header>
