nav working sorta

--- a/deploy/flora.html
+++ b/deploy/flora.html
@@ -21,7 +21,11 @@
                     <img src="img/logo.png" alt="logo">
                 </a>
                 </section>
-                <nav>
+                <aside id="burger-container">
+                    <button id="burger-btn">
+                        <i class="fa-solid fa-bars"></i>
+                    </button>
+                </aside>
                     <nav id="main-menu">
                         <aside class="hide-for-lg">
                            <button id="close-btn">
@@ -37,7 +41,7 @@
                            </ul>
                         </section>
                      </nav>
-                </nav>
+                
             </div>
         </header>
     <section>
