--- a/deploy/index.html
+++ b/deploy/index.html
@@ -26,7 +26,7 @@
                         <i class="fa-solid fa-bars"></i>
                     </button>
                 </aside>
-                    <nav id="main-menu">
+                    <nav id="main-menu" class>
                         <aside class="hide-for-lg">
                            <button id="close-btn">
                               <i class="fa-solid fa-xmark-large"></i>
