--- a/deploy/index.html
+++ b/deploy/index.html
@@ -63,60 +63,74 @@
     <section id="homepage-card-container" class="css-grid-global">
                     <div>
                         <ul id="homepage-cards">
-                            <li >
-                                <section id="hc1" class="card-grid-global">
+                            <li id="hc1">
+                                <section class="card-grid-global">
                                     <div>
                                         <h1>OUR STORY</h1>
+                                        <section class="card-interior">
+                                            <section class="left-side-card">
                                         <img class="home-card-img" src="img/our-story.jpg" alt="our story">
-                                        <p>Vault + Vine aspires to support our community however we can.
-                                            Learn more about us and our mission.</p>
-                                            <section class="home-card-button">
+                                    </section>
+                                        <section class="right-side-card">
+                                            <p>Vault + Vine aspires to support our community however we can.
+                                                Learn more about us and our mission.</p>
+                                            <section class="home-card-button right-side-button">
                                                 <a href="#"><img src="img/round-button.svg" alt="arrow"></a>
+                                            </section>
+                                        </section>
                                     </section>
                                     </div>
                                 </section>
                             </li>
-                            <li >
-                                <section id="hc2" class="card-grid-global">
+                            <li id="hc2">
+                                <section class="card-grid-global">
                                     <div>
                                         <h1>SHOP</h1>
                                         <img class="home-card-img" src="img/shop.jpg" alt="shop">
+                
                                         <p>Let Vault + Vine be your one stop shop for gifts and other items.
                                             Shop our local, sustainable, and unique offerings.</p>
-                                            <section class="home-card-button">
-                                                <a href="#"><img src="img/round-button.svg" alt="arrow"></a>
-                                            </section>
-                                    </div>
-                                </section>
-                            </li>
-                            <li >
-                                <section id="hc3" class="card-grid-global">
-                                    <div>
-                                        <h1>CAFÉ</h1>
-                                        <img class="home-card-img" src="img/cafe.jpg" alt="cafe">
-                                        <p>Enjoy locally sourced coffee, tea and pastries at our in house café.
-                                            Check out our café hours and plan your visit.</p>
-                                            <section class="home-card-button">
-                                                <a href="#"><img src="img/round-button.svg" alt="arrow"></a>
-                                            </section>
-                                    </div>
-                                </section>
-                            </li>
-                            <li >
-                                <section id="hc4" class="card-grid-global">
-                                    <div>
-                                        <h1>FLORA</h1>
-                                        <img class="home-card-img" src="img/plants.jpg" alt="flora">
-                                        <p>Vault + Vine offers a wide variety of locally grown and sourced flowers and other plants.
-                                            Come in and browse our selection or order your arrangement online.</p>
-                                            <section class="home-card-button">
-                                                <a href="#"><img src="img/round-button.svg" alt="arrow"></a>
-                                            </section>
-                                    </div>
-                                </section>
-                            </li>
-                        </ul>
+                                        <section class="home-card-button">
+                                            <a href="#"><img src="img/round-button.svg" alt="arrow"></a>
+                                        </section>
+                            
                     </div>
+                </section>
+                </li>
+                <li id="hc3">
+                    <section class="card-grid-global">
+                        <div>
+                            <h1>CAFÉ</h1>
+                            <img class="home-card-img" src="img/cafe.jpg" alt="cafe">
+                            <p>Enjoy locally sourced coffee, tea and pastries at our in house café.
+                                Check out our café hours and plan your visit.</p>
+                            <section class="home-card-button">
+                                <a href="#"><img src="img/round-button.svg" alt="arrow"></a>
+                            </section>
+                        </div>
+                    </section>
+                </li>
+                <li id="hc4">
+                    <section class="card-grid-global">
+                        <div>
+                            <h1>FLORA</h1>
+                            <section class="card-interior">
+                                <section class="left-side-card">
+                                    <img class="home-card-img" src="img/plants.jpg" alt="flora">
+                                </section>
+                                <section class="right-side-card">
+                                    <p>Vault + Vine offers a wide variety of locally grown and sourced flowers and other plants.
+                                        Come in and browse our selection or order your arrangement online.</p>
+                                    <section class="home-card-button right-side-button">
+                                        <a href="#"><img src="img/round-button.svg" alt="arrow"></a>
+                                    </section>
+                                </section>
+                            </section>
+                        </div>
+                    </section>
+                </li>
+                </ul>
+                </div>
                 </section>
     <section id="about-us" class="css-grid-global">
                         <div id="about-us-inside">
