--- a/deploy/flora.html
+++ b/deploy/flora.html
@@ -45,12 +45,12 @@
             </div>
         </header>
     <section>
-                <img src="img/flora-hero.jpg" alt="flora hero">
+                <img class="hero-img" src="img/flora-hero.jpg" alt="flora hero">
             </section>
-            <section>
+            <section class="css-grid-global">
                 <div>
-                    <h1>FLORA</h1>
-                    <p>
+                    <h1 class="hero-heading">FLORA</h1>
+                    <p class="hero-text">
                         We carry a wide variety of different plants and flowers ready 
                         for any occasion. Whether you want a houseplant for yourself or 
                         an arrangement for a large gathering, Vault + Vine has you 
