--- a/deploy/index.html
+++ b/deploy/index.html
@@ -51,7 +51,7 @@
                     </section>
                     <section class="css-grid-global">
                         <div>
-                        <p id="hero-text">
+                        <p class="hero-text">
                             Welcome to Vault + Vine. We are a floral studio and thoughtfully 
                             curated retail space in East Falls, Philadelphia. Founded in 2017, 
                             our small group of humans are working together to shape the world we wish to live in.
