--- a/deploy/flora.html
+++ b/deploy/flora.html
@@ -84,7 +84,7 @@
                             <section class="card-grid-global">
                                 <div>
                             <h1>PLANTS</h1>
-                            <img class="fora-card-img" src="img/plants.jpg" alt="plants">
+                            <img class="flora-card-img" src="img/plants.jpg" alt="plants">
                             <p>Whether you’ re after something seasonal for the patio, an elegantly 
                                 planted gift, or the perfect arrangement that will live on even after 
                                 a party, Vault + Vine has you covered. Find the perfect plants for 
@@ -110,21 +110,27 @@
                             <section>
                                 <form action="#">
                                     <input type="text">
-                                    <button><img src="img/arrow-right.svg" alt="arrow"></button>
+                                    <button>Search</button>
                                 </form>
                             </section>
                         </div>
                     </section>
-    <section>
-                            <section>
+    <section id="flora-shop" class="css-grid-global">
+                        <div>
+                        <section>
+                            <section id="flora-shop-content">
                                 <p>
-                                    Not a plant person? We’ve got you covered. 
+                                    Not a plant person? We've got you covered. 
                                     From locally sourced coffee and tea to handmade candles, 
                                     Vault + Vine has a product for everyone. 
                                 </p>
+                                <section id="flora-shop-link">
                                 <a href="#">Check out our shop here<img src="img/arrow-right.svg" alt="arrow"></a>
                             </section>
-                        <aside><img src="img/flora-shop.jpg" alt="shop"></aside>
+                            </section>
+                        <aside class="show-for-md"><img src="img/flora-shop.jpg" alt="shop"></aside>
+                        </section>
+                        </div>
                         </section>
     <footer class="css-grid-global">
                                 <div>
